.local/bin/iptables-wall
#!/bin/bash

chnroute_file=~/.chnroute
sudo ipset create chnroute hash:net -exist
sudo cat $chnroute_file | sudo xargs -I ip ipset add chnroute ip -exist
sudo ip route add local default dev lo table 100
sudo ip rule add fwmark 1 lookup 100
sudo iptables-restore << EOF
*nat
:SHADOWTABLES - [0:0]
-A PREROUTING -p tcp -j SHADOWTABLES
-A OUTPUT -p tcp -j SHADOWTABLES
-A SHADOWTABLES -d 240.0.0.0/4 -j RETURN
-A SHADOWTABLES -d 224.0.0.0/4 -j RETURN
-A SHADOWTABLES -d 192.168.0.0/16 -j RETURN
-A SHADOWTABLES -d 172.16.0.0/12 -j RETURN
-A SHADOWTABLES -d 169.254.0.0/16 -j RETURN
-A SHADOWTABLES -d 127.0.0.0/8 -j RETURN
-A SHADOWTABLES -d 10.0.0.0/8 -j RETURN
-A SHADOWTABLES -d 0.0.0.0/8 -j RETURN
-A SHADOWTABLES -d $(jq -j .server /etc/shadowsocks/config.json) -j RETURN
-A SHADOWTABLES -m set --match-set chnroute dst -j RETURN
-A SHADOWTABLES -p tcp -j REDIRECT --to-ports 1080
COMMIT
EOF
#sudo sysctl net/ipv6/conf/all/disable_ipv6=1
curl 'http://ftp.apnic.net/apnic/stats/apnic/delegated-apnic-latest' | grep ipv4 | grep CN | awk -F\| '{ printf("%s/%d\n", $4, 32-log($5)/log(2)) }' > $chnroute_file.bak
if [[ $? -ne 0 ]]; then
  exit 12345
fi
if [[ ! -s $chnroute_file.bak ]]; then
  exit 12346
fi
cp -f $chnroute_file.bak $chnroute_file

IP_ADDR=$(dig +short ss.libivan.com)
CONF_PATH=/etc/shadowsocks/config.json
if [[ $? -eq 0 ]]; then
  jq ".server = \"$IP_ADDR\"" $CONF_PATH | sudo sponge $CONF_PATH
fi
